--- a/registrar_salida/registrar_salida.css
+++ b/registrar_salida/registrar_salida.css
@@ -12,6 +12,7 @@
   box-shadow: 0 0 10px #ccc;
   padding: 20px;
   border-color:#6b2eff;
+  position: relative;
 }
 .header1 {
   display: flex;
@@ -36,17 +37,12 @@
 }
 
 .logo {
-  position: flex;
-  top: 30px;
-  width: 90px;    
-  height: 90px;
-  margin-right: -200px;
-  display: flex;
-  align-items: relative;
-  justify-content: space-between;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 70px;
+  height: 70px;
   z-index: 10;
-  margin: 0;     
-  padding: 0;
   background: transparent;
 }
 .logo img {
@@ -171,4 +167,19 @@ canvas {
 
 .btn-red:hover {
   background-color: #e0143a;
+}
+
+.btn-blue {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  margin-top: 15px;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-blue:hover {
+  background-color: #0056b3;
 }
