--- a/registrar_entrada/registrar_entrada.css
+++ b/registrar_entrada/registrar_entrada.css
@@ -9,7 +9,7 @@
   height: 700px;
   margin: 2rem auto;
   border-radius: 10px;
-  box-shadow: 0 0 10px #ccc;
+  box-shadow: 10px 10px 10px #ccc;
   padding: 20px;
   border-color:#6b2eff;
   position: relative;
